implemented ini file

--- a/BigBadWolf.ini
+++ b/BigBadWolf.ini
@@ -1,9 +1,18 @@
 [Gameplay]
 ControlsWolf 		 = "Player"
 ControlsRotkaeppchen = "Player"
+; the controller of the creature ("Player" or "CPU")
 TimeLimit			 = 60
+; in seconds
 
 [Video Settings]
-MaxFrames = 100
-Fullscreen = 1
-Resolution = "1920x1080"
+MaxFrames  = 100
+; maximum of frames per second
+Fullscreen = 0
+Width      = 800
+Height     = 600
+; size of the game window
+
+[Debugging]
+UseLogging = 0 
+; if this is enabled, a Logfile "log.txt" will be created
