added minimum distance at spawn

--- a/BigBadWolf.ini
+++ b/BigBadWolf.ini
@@ -4,6 +4,8 @@ ControlsRotkaeppchen = "Player"
 ; the controller of the creature ("Player" or "CPU")
 TimeLimit			 = 60
 ; in seconds
+MinDistance	         = 100
+; minimum distance in pixels between wolf and rotkaeppchen at the beginning
 
 [Video Settings]
 MaxFrames  = 100
